{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 22,
  "lineage": "acc0089c-e4c8-7c74-63b9-5ac859d9c494",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-062c069bfc04af24f",
            "domain": "vpc",
            "id": "eipalloc-062c069bfc04af24f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-221-37-3.compute-1.amazonaws.com",
            "public_ip": "3.221.37.3",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "week21terraformEnvironment-elastic-ip"
            },
            "tags_all": {
              "Name": "week21terraformEnvironment-elastic-ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163625280968:internet-gateway/igw-0e97742dc77fc1c52",
            "id": "igw-0e97742dc77fc1c52",
            "owner_id": "163625280968",
            "tags": {
              "Name": "Terraform2023_internet_gateway"
            },
            "tags_all": {
              "Name": "Terraform2023_internet_gateway"
            },
            "vpc_id": "vpc-0c393afe2d3e3b2a6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:163625280968:loadbalancer/app/week21terraformEnvironment-alb/2762b72f3c00f238",
            "arn_suffix": "app/week21terraformEnvironment-alb/2762b72f3c00f238",
            "desync_mitigation_mode": "defensive",
            "dns_name": "week21terraformEnvironment-alb-310482468.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:163625280968:loadbalancer/app/week21terraformEnvironment-alb/2762b72f3c00f238",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "week21terraformEnvironment-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0212175fa02a573b5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-024c0e37d99c2be0b"
              },
              {
                "subnet_id": "subnet-0b0515e62f21e3e89"
              }
            ],
            "subnets": [
              "subnet-024c0e37d99c2be0b",
              "subnet-0b0515e62f21e3e89"
            ],
            "vpc_id": "vpc-0c393afe2d3e3b2a6",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:163625280968:listener/app/week21terraformEnvironment-alb/2762b72f3c00f238/e8ea0a351b4259ff",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:163625280968:targetgroup/week21terraformEnvironment-tgrp/bdd41d18b16404f5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:163625280968:listener/app/week21terraformEnvironment-alb/2762b72f3c00f238/e8ea0a351b4259ff",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:163625280968:loadbalancer/app/week21terraformEnvironment-alb/2762b72f3c00f238",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "week21terraformEnvironment-alb-listenter"
            },
            "tags_all": {
              "Name": "week21terraformEnvironment-alb-listenter"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.target_group",
            "aws_security_group.alb_security_group",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:163625280968:targetgroup/week21terraformEnvironment-tgrp/bdd41d18b16404f5",
            "arn_suffix": "targetgroup/week21terraformEnvironment-tgrp/bdd41d18b16404f5",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:163625280968:targetgroup/week21terraformEnvironment-tgrp/bdd41d18b16404f5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "week21terraformEnvironment-tgrp",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c393afe2d3e3b2a6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-062c069bfc04af24f",
            "association_id": "eipassoc-0c6ea5d0a568e40ab",
            "connectivity_type": "public",
            "id": "nat-0af301ea863466423",
            "network_interface_id": "eni-0f60ecddd3d871298",
            "private_ip": "10.10.0.67",
            "public_ip": "3.221.37.3",
            "subnet_id": "subnet-024c0e37d99c2be0b",
            "tags": {
              "Name": "Terraform2023InternetGateway"
            },
            "tags_all": {
              "Name": "Terraform2023InternetGateway"
            }
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163625280968:route-table/rtb-000a39f76d2aa10a4",
            "id": "rtb-000a39f76d2aa10a4",
            "owner_id": "163625280968",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0af301ea863466423",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "week21terraformEnvironment-private-route-table"
            },
            "tags_all": {
              "Name": "week21terraformEnvironment-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c393afe2d3e3b2a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163625280968:route-table/rtb-040da973672a72c6e",
            "id": "rtb-040da973672a72c6e",
            "owner_id": "163625280968",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e97742dc77fc1c52",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "week21terraformEnvironment-public-route-table"
            },
            "tags_all": {
              "Name": "week21terraformEnvironment-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c393afe2d3e3b2a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042b01fcacfc52db8",
            "route_table_id": "rtb-000a39f76d2aa10a4",
            "subnet_id": "subnet-079d66066e6a82739"
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e6de8f4d6733aab",
            "route_table_id": "rtb-000a39f76d2aa10a4",
            "subnet_id": "subnet-0e523ab5bd72052a2"
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f670f4895ded29a",
            "route_table_id": "rtb-040da973672a72c6e",
            "subnet_id": "subnet-024c0e37d99c2be0b"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ec0eb34da7fb4cc",
            "route_table_id": "rtb-040da973672a72c6e",
            "subnet_id": "subnet-0b0515e62f21e3e89"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163625280968:security-group/sg-0212175fa02a573b5",
            "description": "ALB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0212175fa02a573b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "week21terraformEnvironment-alb-security-group",
            "name_prefix": "",
            "owner_id": "163625280968",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "week21terraformEnvironment-alb-security-group"
            },
            "tags_all": {
              "Name": "week21terraformEnvironment-alb-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c393afe2d3e3b2a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163625280968:security-group/sg-0d52d3bc973bc786a",
            "description": "ASG Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d52d3bc973bc786a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0212175fa02a573b5"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "week21terraformEnvironment-asg-security-group",
            "name_prefix": "",
            "owner_id": "163625280968",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "week21terraformEnvironment-asg-security-group"
            },
            "tags_all": {
              "Name": "week21terraformEnvironment-asg-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c393afe2d3e3b2a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163625280968:subnet/subnet-079d66066e6a82739",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079d66066e6a82739",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "163625280968",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "week21terraformEnvironment-private-subnet-us-east-1a"
            },
            "tags_all": {
              "Name": "week21terraformEnvironment-private-subnet-us-east-1a"
            },
            "vpc_id": "vpc-0c393afe2d3e3b2a6"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163625280968:subnet/subnet-0e523ab5bd72052a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e523ab5bd72052a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "163625280968",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "week21terraformEnvironment-private-subnet-us-east-1b"
            },
            "tags_all": {
              "Name": "week21terraformEnvironment-private-subnet-us-east-1b"
            },
            "vpc_id": "vpc-0c393afe2d3e3b2a6"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163625280968:subnet/subnet-024c0e37d99c2be0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024c0e37d99c2be0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "163625280968",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "week21terraformEnvironment-public-subnet-us-east-1a"
            },
            "tags_all": {
              "Name": "week21terraformEnvironment-public-subnet-us-east-1a"
            },
            "vpc_id": "vpc-0c393afe2d3e3b2a6"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163625280968:subnet/subnet-0b0515e62f21e3e89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0515e62f21e3e89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "163625280968",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "week21terraformEnvironment-public-subnet-us-east-1b"
            },
            "tags_all": {
              "Name": "week21terraformEnvironment-public-subnet-us-east-1b"
            },
            "vpc_id": "vpc-0c393afe2d3e3b2a6"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163625280968:vpc/vpc-0c393afe2d3e3b2a6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0ef3decb926fba538",
            "default_route_table_id": "rtb-0aa6bc2efc3039fef",
            "default_security_group_id": "sg-079313247d2b79a66",
            "dhcp_options_id": "dopt-0e0a6cf7dd221eaba",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c393afe2d3e3b2a6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aa6bc2efc3039fef",
            "owner_id": "163625280968",
            "tags": {
              "Name": "TerraformVPC2023"
            },
            "tags_all": {
              "Name": "TerraformVPC2023"
            }
          }
        }
      ]
    }
  ]
}